2008-05-30  Carlos Martín Nieto  <carlos@cmartin.tk>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18383
        [GTK] The "hovering-over-link" signal arguments aren't documented.

        * webkit/webkitwebview.cpp:

2008-05-29  Marco Barisione  <marco@collabora.co.uk>

        Reviewed (and tweaked) by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18281
        [GTK] add functions to set/get the zoom level

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::):
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        (_WebKitWebSettingsPrivate::webkit_web_settings_set_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_get_property):
        * webkit/webkitwebview.cpp: Add functions to get and set the zoom
        level.
        * webkit/webkitwebview.h: Ditto.
        * webkit/webkitprivate.h:

2008-05-28  Alp Toker  <alp@nuanti.com>

        Reviewed by Alexey Proskuryakov.

        http://bugs.webkit.org/show_bug.cgi?id=18704
        [gtk] cannot type letters with dead keys in textarea

        http://bugs.webkit.org/show_bug.cgi?id=14120
        [GDK] Support input methods

        Add support for input method composition.

        Remove some old hacks so we handle input method events more
        consistently.

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::imContextCommitted):
        (WebKit::imContextPreeditChanged):
        (WebKit::EditorClient::setInputMethodState):
        (WebKit::EditorClient::respondToChangedSelection):
        (WebKit::EditorClient::handleInputMethodKeydown):
        (WebKit::EditorClient::EditorClient):
        (WebKit::EditorClient::~EditorClient):
        (WebKit::EditorClient::textFieldDidBeginEditing):
        (WebKit::EditorClient::textFieldDidEndEditing):
        (WebKit::EditorClient::textDidChangeInTextField):
        (WebKit::EditorClient::doTextFieldCommandFromEvent):