@@ -101,7 +101,7 @@ enum {
     PROP_SETTINGS,
     PROP_TRANSPARENT,
     PROP_ZOOM_LEVEL,
-    PROP_ZOOM_TEXT_ONLY
+    PROP_FULL_CONTENT_ZOOM
 };
 
 static guint webkit_web_view_signals[LAST_SIGNAL] = { 0, };
@@ -240,7 +240,7 @@ static void webkit_web_view_get_property(GObject* object, guint prop_id, GValue*
     case PROP_ZOOM_LEVEL:
         g_value_set_float(value, webkit_web_view_get_zoom_level(webView));
         break;
-    case PROP_ZOOM_TEXT_ONLY:
+    case PROP_FULL_CONTENT_ZOOM:
         g_value_set_boolean(value, webkit_web_view_get_full_content_zoom(webView));
         break;
     default:
@@ -265,7 +265,7 @@ static void webkit_web_view_set_property(GObject* object, guint prop_id, const G
     case PROP_ZOOM_LEVEL:
         webkit_web_view_set_zoom_level(webView, g_value_get_float(value));
         break;
-    case PROP_ZOOM_TEXT_ONLY:
+    case PROP_FULL_CONTENT_ZOOM:
         webkit_web_view_set_full_content_zoom(webView, g_value_get_boolean(value));
         break;
     default:
@@ -1229,10 +1229,10 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
                                                        1,
                                                        WEBKIT_PARAM_READWRITE));
 
-    g_object_class_install_property(objectClass, PROP_ZOOM_TEXT_ONLY,
+    g_object_class_install_property(objectClass, PROP_FULL_CONTENT_ZOOM,
                                     g_param_spec_boolean("full-content-zoom",
-                                                         "Text-only zoom",
-                                                         "Whether only the text size is changed when zooming",
+                                                         "Full content zoom",
+                                                         "Whether the full content is scaled when zooming",
                                                          FALSE,
                                                          WEBKIT_PARAM_READWRITE));
 
